# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  23 Jul 2011; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
  netboot/linuxrc.x:
  Fix permissions of /dev/pts (bug #375947)

  20 Jul 2011; Fabio Erculiani <lxnay@sabayon.org> defaults/config.sh,
  doc/genkernel.8.txt, gen_cmdline.sh, gen_compile.sh:
  Make possible to compile XEN based kernels providing --kernel-target= and
  --kernel-binary= switches

  03 Jul 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Set version to 3.4.17

  03 Jul 2011; Sebastian Pipping <sping@gentoo.org> arch/alpha/modules_load,
  arch/arm/modules_load, arch/ia64/modules_load, arch/mips/modules_load,
  arch/parisc/modules_load, arch/parisc64/modules_load, arch/ppc/modules_load,
  arch/ppc64/modules_load, arch/sparc/modules_load, arch/sparc64/modules_load,
  arch/um/modules_load, arch/x86/modules_load, arch/x86_64/modules_load,
  defaults/initrd.defaults, defaults/initrd.scripts, defaults/linuxrc,
  defaults/modules_load, doc/genkernel.8.txt, gen_cmdline.sh,
  gen_determineargs.sh, gen_initramfs.sh, genkernel, genkernel.conf,
  maintenance/docmatcher.py:
  Remove support for sys-fs/evms, as it was removed from Gentoo (bug #372423)

  22 Jun 2011; Sebastian Pipping <sping@gentoo.org> gen_compile.sh:
  Make --arch-override= affect "make menuconfig" (bug #247246)

  13 Jun 2011; Sebastian Pipping <sping@gentoo.org> arch/x86_64/kernel-config:
  Unset CONFIG_EMBEDDED on arch amd64

  13 Jun 2011; Sebastian Pipping <sping@gentoo.org> arch/x86/kernel-config,
  arch/x86_64/kernel-config, defaults/kernel-config:
  Apply CONFIG_USB_HID=y to archs amd64/x86/default (bug #270983)

  13 Jun 2011; Sebastian Pipping <sping@gentoo.org> arch/x86/kernel-config,
  arch/x86_64/kernel-config, defaults/kernel-config:
  Unset CONFIG_IDE on archs amd64/x86/default (bug #357213)
